[package]
name = "strichliste-rs"
version = "0.1.0"
authors = ["Tobias Wich <mrfancypants@electrologi.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.25.3"
warp = "0.2.5"
#serde = { version = "1.0.117", features = ["derive"] }
#serde_json = "1.0.59"
tokio = { version = "0.2.22", features = ["macros", "rt-threaded"] }
