[package]
name = "strichliste-rs"
version = "0.1.0"
authors = ["Tobias Wich <mrfancypants@electrologi.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1.11"
warp = "0.2.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.14"
tokio = { version = "0.2.22", features = ["macros", "rt-threaded"] }
sqlx = { version="0.4.1", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "macros", "chrono"] }
ms-converter = "1.4.0"
regex = "1"
